Fixed scrollbar from grid result by adding a div inside of it

--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -145,7 +145,7 @@
 	display: flex;
     flex-direction: column;
 	gap: 0.5em;
-    transition: transform 1s ease, box-shadow 1s ease-in-out;
+    transition: transform .5s ease, box-shadow .5s ease-in-out;
     cursor: pointer;
     padding: 0.5em;
 }
@@ -157,7 +157,7 @@
 .search-list__item:hover{
     transform: translateZ(2px) translateX(2px);
     box-shadow: inset 1px 1px 5px var(--color1), inset -1px -1px 5px var(--color1), 2px 2px 4px var(--black);
-    transition: transform .5s ease, box-shadow .25s ease-in-out;    
+    transition: transform .25s ease, box-shadow .125s ease-in-out;    
 }
 
 .search-item__thumbnail img{
@@ -189,8 +189,8 @@
 
 .modal__result-grid{
     z-index: 3;
-    width: 90vw; /*Medida provisoria*/
-    height: 90vh;
+    width: 90vw;
+    height: 95vh;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -199,6 +199,11 @@
     padding: 1em;
     border-radius: calc(min(80vw, 75vh) / 10);
     border: min(.75vw, 10px) solid var(--color3);
+    overflow: hidden;
+}
+
+.result-grid__container{
+    height: 100%;
     overflow-y: scroll;
 }
 
@@ -375,9 +380,10 @@
     font-family: var(--family-text);
     color: var(--white);
     border: none;
-    font-size: var(--size-large);
+    font-size: var(--size-medium);
     padding: .5em 1.75em;
-    border-radius: calc(var(--size-large) + 1em);
+    border-radius: calc(var(--size-medium) + 1em);
+    margin-bottom: var(--size-medium);
 }
 
 .button-add{
